<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HQW</string>
    <string name="Hello"> Hello </string>
    <string name="likes_0" translatable="false" tools:ignore="ExtraTranslation">Нравится</string>
    <string name="comments_0" tools:ignore="ExtraTranslation">Комментарии</string>
    <string name="replies_0" tools:ignore="ExtraTranslation">Поделиться</string>
    <string name="views_0" tools:ignore="ExtraTranslation">Просмотры</string>
    <string name="menu_remove" translatable="false">Удалить</string>
    <string name="post_text" translatable="false">Текст поста</string>
    <string name="menu_edit" translatable="false">Изменить</string>
    <string name="error_empty_content" translatable="false">Поле не может быть пустым</string>
    <string name="save" translatable="false">Сохранить</string>
    <string name="cancel_button" translatable="false">Отмена</string>
    <string name="editing_mode" translatable="false">Редактировано</string>
    <string name="editing" translatable="false">Редактировать</string>
    <string name="menu" translatable="false">Меню</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="description_play_button" translatable="false">Play video</string>
    <string name="description_video_card" translatable="false">Silent button</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_published" translatable="false">User %1$s published a new post-></string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="empty_posts" />
    <string name="error_loading" />
    <string name="retry_loading" />
    <string name="google_play_unavailable" />
    <string name="post_image" />
</resources>