<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default">


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_margin="@dimen/margin_default"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_netology_48dp_foreground"
            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/posts.json/data/avatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, published, menu" />

        <ImageView
            android:id="@+id/videoCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/description_video_card"
            android:src="@drawable/ic_netology_48dp_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            tools:srcCompat="@sample/posts.json/data/video" />

        <ImageView
            android:id="@+id/attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/post_image"
            app:layout_constraintEnd_toStartOf="@id/footer"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            tools:srcCompat="@sample/posts.json/data/attachment" />

        <TextView
            android:id="@+id/videoLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/videoCard"
            tools:text="YOUTUBE video" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/play"
            style="@style/Widget.AppTheme.PlayButton.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_play_button"
            android:icon="@drawable/ic_baseline_play_circle_filled_24"
            app:layout_constraintBottom_toTopOf="@id/videoLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintVertical_bias="0.97" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/videoGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="play, videoCard, videoLink" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.5"
            android:paddingTop="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierTop"
            tools:text="@sample/posts.json/data/content" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="videoLink" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/likes"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_baseline_favorite_24"
            android:checked="true"
            android:contentDescription="@string/likes_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:checked="@sample/posts.json/data/likedByMe"
            tools:text="@sample/posts.json/data/likes" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/replies"
            style="@style/Widget.AppTheme.ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:contentDescription="@string/replies_0"
            app:icon="@drawable/ic_round_share_24"
            app:layout_constraintStart_toEndOf="@+id/likes"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:text="@sample/posts.json/data/replies" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/views"
            style="@style/Widget.AppTheme.ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:contentDescription="@string/views_0"
            app:icon="@drawable/ic_baseline_visibility_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:text="@sample/posts.json/data/views" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>